--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -20,7 +21,11 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
